<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <EditText
        android:id="@+id/createFName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="53dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/createLName"
        app:layout_constraintEnd_toStartOf="@+id/createLName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/createLName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/createEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createFName" />

    <EditText
        android:id="@+id/createEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/createFName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/createEmail"
        app:layout_constraintTop_toBottomOf="@+id/createEmail" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/createUsername"
        app:layout_constraintTop_toBottomOf="@+id/createUsername" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/createPassword"
        app:layout_constraintTop_toBottomOf="@+id/createPassword" />

    <Button
        android:id="@+id/createButtonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/editText7"
        app:layout_constraintStart_toStartOf="@+id/editText7"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

</android.support.constraint.ConstraintLayout>