<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settings"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsNickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/settingsNickname"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/settingsSwitchSound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/settingsSwitchSound"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sound_effects"
        app:layout_constraintBottom_toTopOf="@+id/settingsSwitchOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/settingsSwitchOther"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/other_setting"
        app:layout_constraintBottom_toTopOf="@+id/settingsButtonQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsButtonQuestions"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:text="@string/change_question_preferences"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SettingsButtonOK"
        android:layout_width="56dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:onClick="nickname"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toEndOf="@+id/settingsNickname"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

</android.support.constraint.ConstraintLayout>